--- a/.github/workflows/lineage_notes.yml
+++ b/.github/workflows/lineage_notes.yml
@@ -13,12 +13,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.9
+        cache: "pip"
     - name: Install packages
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas
+      run: pip install pandas
     - name: Analyze lineage notes file
-      run: ./analyze_lineage_notes.py
+      run: python analyze_lineage_notes.py
