--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,9 @@ repos:
         entry: python tests/test_alias_json.py
         language: python
         files: pango_designation/alias_key.json
+    -   id: lineages-csv-duplicates
+        name: Test lineages.csv for duplicates
+        entry: python tests/test_duplicate_designations.py
+        language: python
+        files: lineages.csv
+
