--- a/.github/workflows/lineage_notes.yml
+++ b/.github/workflows/lineage_notes.yml
@@ -7,16 +7,13 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install packages
-      run: pip install pandas
-    - name: Analyze lineage notes file
-      run: python analyze_lineage_notes.py
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+      - name: Install packages
+        run: pip install pandas
+      - name: Analyze lineage notes file
+        run: python analyze_lineage_notes.py
