--- a/.github/workflows/lineage_notes.yml
+++ b/.github/workflows/lineage_notes.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
       - name: Install packages
         run: pip install pandas
       - name: Analyze lineage notes file
