Use non-local actionlint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,7 @@ repos:
         entry: python tests/test_duplicate_lineage_in_notes.py
         language: python
         files: lineage_notes.txt
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.6.26
+    hooks:
       - id: actionlint
-        name: Lint GitHub Actions workflow files
-        description: Runs actionlint to lint GitHub Actions workflow files
-        language: docker_image
-        types: ["yaml"]
-        files: ^\.github/workflows/
-        entry: rhysd/actionlint:1.6.26
