--- a/.github/workflows/issue-milestone-collector.yml
+++ b/.github/workflows/issue-milestone-collector.yml
@@ -208,11 +208,11 @@ jobs:
       run: |
             mkdir -p -v $SCRIPT_DIR/$STREAM_DIR $SCRIPT_DIR/$MAPPING_DIR $SCRIPT_DIR/$DATA_DIR
 
-    - name: Download Stream Artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: ${{ env.STREAM_NAME }}
-        path: ${{ env.SCRIPT_DIR }}/${{ env.STREAM_DIR }}
+    # - name: Download Stream Artifacts
+    #   uses: actions/download-artifact@v3
+    #   with:
+    #     name: ${{ env.STREAM_NAME }}
+    #     path: ${{ env.SCRIPT_DIR }}/${{ env.STREAM_DIR }}
 
     - name: Download Mapping Artifacts
       uses: actions/download-artifact@v3
