Designate GW.5.2 (N:T379I) and GW.5.3 (T20310C, C28519T)

--- a/.github/workflows/issue-milestone-collector.yml
+++ b/.github/workflows/issue-milestone-collector.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: '0 0/12 * * *'
+    - cron: '0 3 * * *'
         
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -311,4 +311,4 @@ jobs:
               git commit -a -m "$COMMIT_MESSAGE"
               git push
             fi
-      
+
